# backend-exercise

./: pyproject.toml  readme.md
weatheragg/: manage.py
weatheragg/Bootstrap/: api_v1.py  asgi.py  settings.py  urls.py  wsgi.py
weatheragg/apps/air/: apps.py  views.py
weatheragg/apps/common/: models.py  schemas.py
weatheragg/apps/common/migrations/: 0001_initial.py
weatheragg/apps/main/: models.py  schemas.py  views.py
weatheragg/apps/main/migrations/: 0001_initial.py
weatheragg/apps/water/: apps.py  views.py
